Fix styling so that background behind 'User Login' 'User Name', 'Password', and 'Submit' are now transparent, previously there was a black box behind them on an extremely dark gray background.

--- a/login_template/style/styles.css
+++ b/login_template/style/styles.css
@@ -58,6 +58,13 @@
 .login_form h3 {
     margin-bottom: 10px;
     color: #ce2029; /* Red color for headings */
+    border-radius: 9px; /* Optional if you still want rounded corners */
+    background-color: transparent; /* Use no background */
+}
+
+
+.login_form .user, .password, .submit-button {
+    background-color: transparent;
 }
 
 /* Button styling */
